--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: fedfcc27f623dc7646d1b400415a9f8e417bda0e4dc7501f7f3a9c79bfcbe9f9
+-- hash: c22d682705909e560ecf37438cb629e352f5be9a7f42bf12e37f91f87f36e505
 
 name:           advent
 version:        0.1.0.0
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Day1
+      Day2
   other-modules:
       Paths_advent
   hs-source-dirs:
@@ -53,6 +54,7 @@ test-suite advent-test
   main-is: Spec.hs
   other-modules:
       Day1Spec
+      Day2Spec
       Paths_advent
   hs-source-dirs:
       test
