Day3 - initial test for intersections

--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 24ec594b2e226a53c4ba3d827f9be3a23e0f85f5482a9d640a2d08df1f324da5
+-- hash: b379232f8e4b01aca9d54619f616a810146dde593ae29e5a3831599b064cdfb8
 
 name:           advent
 version:        0.1.0.0
@@ -29,6 +29,7 @@ library
   exposed-modules:
       Day1
       Day2
+      Day3
   other-modules:
       Paths_advent
   hs-source-dirs:
@@ -56,6 +57,7 @@ test-suite advent-test
   other-modules:
       Day1Spec
       Day2Spec
+      Day3Spec
       Paths_advent
   hs-source-dirs:
       test
