--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6af7d0738798fa293be5b6edbba8918d8ba293fa0dcf030a6055faa92e1a9b7b
+-- hash: 3004905d9f803576953a440ad1fe7d871d0fe4a8be4221c955c5012c97509c1f
 
 name:           advent
 version:        0.1.0.0
@@ -31,6 +31,7 @@ library
       Day2
       Day3
       Day4
+      Day5
   other-modules:
       Paths_advent
   hs-source-dirs:
@@ -60,6 +61,7 @@ test-suite advent-test
       Day2Spec
       Day3Spec
       Day4Spec
+      Day5Spec
       Paths_advent
   hs-source-dirs:
       test
