--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 51b0c4b772d5608b938919fa1418ca85bde14101c03ed44b076f16a6806cb2d3
+-- hash: 928913b86da161f575678a497652906f8b0344c216e4f40d8482e5b67f91c487
 
 name:           advent
 version:        0.1.0.0
@@ -33,6 +33,7 @@ library
       Day4
       Day5
       Day6
+      Day7
   other-modules:
       Paths_advent
   hs-source-dirs:
@@ -64,6 +65,7 @@ test-suite advent-test
       Day4Spec
       Day5Spec
       Day6Spec
+      Day7Spec
       Paths_advent
   hs-source-dirs:
       test
