--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 928913b86da161f575678a497652906f8b0344c216e4f40d8482e5b67f91c487
+-- hash: 1aced821b43f792c1bf6706cda5f5c422eee1830441b9a49e7db15b603a215a4
 
 name:           advent
 version:        0.1.0.0
@@ -34,6 +34,7 @@ library
       Day5
       Day6
       Day7
+      Day8
   other-modules:
       Paths_advent
   hs-source-dirs:
@@ -66,6 +67,7 @@ test-suite advent-test
       Day5Spec
       Day6Spec
       Day7Spec
+      Day8Spec
       Paths_advent
   hs-source-dirs:
       test
