--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 34cae24221ca5f4831d116211bfed865dd747fb88af808cfeedee72dec8f0469
+-- hash: 27cefe2f26c8e92406eb17e4bff7acceea358f2d4ec03a9c81f8d721bfea2f85
 
 name:           advent
 version:        0.1.0.0
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Day1
+      Day10
       Day2
       Day3
       Day4
@@ -62,6 +63,7 @@ test-suite advent-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Day10Spec
       Day1Spec
       Day2Spec
       Day3Spec
