--- a/advent.cabal
+++ b/advent.cabal
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Day1
+    , Day2
   other-modules:
       Paths_advent
   hs-source-dirs:
@@ -35,6 +36,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , regex-tdfa
     , split
   default-language: Haskell2010
 
@@ -55,6 +57,7 @@ test-suite advent-test
   main-is: Spec.hs
   other-modules:
       Day1Spec
+      Day2Spec
       Paths_advent
   hs-source-dirs:
       test
