--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 8d9133b4dd4243fcdf78c8ff1b814e8eb03789c20d643df9269f33c956f7732f
+-- hash: 7b7ca10905e5c794ab80863fdefae60b07a1232f3f86f31aef21675fc9099a3c
 
 name:           advent
 version:        0.1.0.0
@@ -28,7 +28,9 @@ source-repository head
 library
   exposed-modules:
       Day1
-    , Day2
+      Day2
+      Day3
+      Day4
   other-modules:
       Paths_advent
   hs-source-dirs:
@@ -50,6 +52,8 @@ executable advent-exe
   build-depends:
       advent
     , base >=4.7 && <5
+    , containers
+    , regex-tdfa
   default-language: Haskell2010
 
 test-suite advent-test
@@ -58,6 +62,8 @@ test-suite advent-test
   other-modules:
       Day1Spec
       Day2Spec
+      Day3Spec
+      Day4Spec
       Paths_advent
   hs-source-dirs:
       test
@@ -65,5 +71,7 @@ test-suite advent-test
   build-depends:
       advent
     , base >=4.7 && <5
+    , containers
     , hspec
+    , regex-tdfa
   default-language: Haskell2010
