--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 9dd95272ca8e49bac07cc81fcfe69453df81f7f505413e49af38fe92ae5b5ce3
+-- hash: bc3951b95e6ddbf5dfd178b7de63fc6fff8dfda6dccced53f45ba14a9c0b837f
 
 name:           advent
 version:        0.1.0.0
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Day1
+      Day10
       Day2
       Day3
       Day4
@@ -67,6 +68,7 @@ test-suite advent-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Day10Spec
       Day1Spec
       Day2Spec
       Day3Spec
