--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: bc3951b95e6ddbf5dfd178b7de63fc6fff8dfda6dccced53f45ba14a9c0b837f
+-- hash: 834654a761403fb3030c5f3811edf5b40dcaa0b6a9f47eee54e262d525856b90
 
 name:           advent
 version:        0.1.0.0
@@ -29,6 +29,7 @@ library
   exposed-modules:
       Day1
       Day10
+      Day11
       Day2
       Day3
       Day4
@@ -69,6 +70,7 @@ test-suite advent-test
   main-is: Spec.hs
   other-modules:
       Day10Spec
+      Day11Spec
       Day1Spec
       Day2Spec
       Day3Spec
