--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 834654a761403fb3030c5f3811edf5b40dcaa0b6a9f47eee54e262d525856b90
+-- hash: 9738e8941ac25dad6594ace7bf72d12288a4bf313e7fd72f54522a807ee972d3
 
 name:           advent
 version:        0.1.0.0
@@ -30,6 +30,7 @@ library
       Day1
       Day10
       Day11
+      Day12
       Day2
       Day3
       Day4
@@ -71,6 +72,7 @@ test-suite advent-test
   other-modules:
       Day10Spec
       Day11Spec
+      Day12Spec
       Day1Spec
       Day2Spec
       Day3Spec
