--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 9738e8941ac25dad6594ace7bf72d12288a4bf313e7fd72f54522a807ee972d3
+-- hash: 5fb1d9910df65a0eb62ad971094af8783215c446712ecad7d9ff148c58e1d7cd
 
 name:           advent
 version:        0.1.0.0
@@ -31,6 +31,7 @@ library
       Day10
       Day11
       Day12
+      Day12b
       Day2
       Day3
       Day4
@@ -72,6 +73,7 @@ test-suite advent-test
   other-modules:
       Day10Spec
       Day11Spec
+      Day12bSpec
       Day12Spec
       Day1Spec
       Day2Spec
