--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e458e3dae52dbc9845e652dfa23bc50d85e3ab123a49e3ec3c24ab1c676c95e1
+-- hash: f8f85ce44a201a1ed7860dc4292f672f799c2dbb1f754b16630b164357b72bf7
 
 name:           advent
 version:        0.1.0.0
@@ -34,6 +34,7 @@ library
       Day12b
       Day13
       Day14
+      Day15
       Day2
       Day3
       Day4
@@ -79,6 +80,7 @@ test-suite advent-test
       Day12Spec
       Day13Spec
       Day14Spec
+      Day15Spec
       Day1Spec
       Day2Spec
       Day3Spec
