--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f8f85ce44a201a1ed7860dc4292f672f799c2dbb1f754b16630b164357b72bf7
+-- hash: 5c41038aa4adf1447727d9f37c15cad36f61f2ae6b8ac3d77a64a57bbb53dc82
 
 name:           advent
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
       Day13
       Day14
       Day15
+      Day16
       Day2
       Day3
       Day4
@@ -81,6 +82,7 @@ test-suite advent-test
       Day13Spec
       Day14Spec
       Day15Spec
+      Day16Spec
       Day1Spec
       Day2Spec
       Day3Spec
