--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 5c41038aa4adf1447727d9f37c15cad36f61f2ae6b8ac3d77a64a57bbb53dc82
+-- hash: 26626efc0c02dd5add0cf73e006b259569f4a17e5485d21600cc25e22cc9f865
 
 name:           advent
 version:        0.1.0.0
@@ -36,6 +36,7 @@ library
       Day14
       Day15
       Day16
+      Day17
       Day2
       Day3
       Day4
@@ -83,6 +84,7 @@ test-suite advent-test
       Day14Spec
       Day15Spec
       Day16Spec
+      Day17Spec
       Day1Spec
       Day2Spec
       Day3Spec
