--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 26626efc0c02dd5add0cf73e006b259569f4a17e5485d21600cc25e22cc9f865
+-- hash: 0ca63abb6a28e3ae537d7c6018bd1b38ebcedff8bf203864da214cd98f3f19cb
 
 name:           advent
 version:        0.1.0.0
@@ -37,6 +37,7 @@ library
       Day15
       Day16
       Day17
+      Day18
       Day2
       Day3
       Day4
@@ -85,6 +86,7 @@ test-suite advent-test
       Day15Spec
       Day16Spec
       Day17Spec
+      Day18Spec
       Day1Spec
       Day2Spec
       Day3Spec
