--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0ca63abb6a28e3ae537d7c6018bd1b38ebcedff8bf203864da214cd98f3f19cb
+-- hash: a7f90a34e483d6b953f86e4b9a16b8cbde4f1ccfb01dbb6b05fb1d01d47fc47c
 
 name:           advent
 version:        0.1.0.0
@@ -38,6 +38,7 @@ library
       Day16
       Day17
       Day18
+      Day19
       Day2
       Day3
       Day4
@@ -68,9 +69,6 @@ executable advent-exe
   build-depends:
       advent
     , base >=4.7 && <5
-    , containers
-    , regex-tdfa
-    , set-extra
   default-language: Haskell2010
 
 test-suite advent-test
@@ -87,6 +85,7 @@ test-suite advent-test
       Day16Spec
       Day17Spec
       Day18Spec
+      Day19Spec
       Day1Spec
       Day2Spec
       Day3Spec
@@ -105,6 +104,5 @@ test-suite advent-test
     , base >=4.7 && <5
     , containers
     , hspec
-    , regex-tdfa
-    , set-extra
+    , split
   default-language: Haskell2010
