--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a7f90a34e483d6b953f86e4b9a16b8cbde4f1ccfb01dbb6b05fb1d01d47fc47c
+-- hash: b49636720967a2b3c2f14bbee33e4146282871ba750e0b1daef6d82285b5a657
 
 name:           advent
 version:        0.1.0.0
@@ -40,6 +40,7 @@ library
       Day18
       Day19
       Day2
+      Day20
       Day3
       Day4
       Day5
@@ -87,6 +88,7 @@ test-suite advent-test
       Day18Spec
       Day19Spec
       Day1Spec
+      Day20Spec
       Day2Spec
       Day3Spec
       Day4Spec
