--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d494c269e75861c7bd1bd5670b775ab34625342023708d43935eebf7d16d4d76
+-- hash: ff7546c3e016f5b61092e6208ef1d48617a62a8d2996435dfaec507cb0af4733
 
 name:           advent
 version:        0.1.0.0
@@ -44,6 +44,7 @@ library
       Day21
       Day22
       Day23
+      Day24
       Day3
       Day4
       Day5
@@ -95,6 +96,7 @@ test-suite advent-test
       Day21Spec
       Day22Spec
       Day23Spec
+      Day24Spec
       Day2Spec
       Day3Spec
       Day4Spec
